Copy image to same repo, set height to prevent jumping

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ section, footer {
   font-weight: 300;
 }
 
+.introduction .logo {
+  height: 180px;
+}
+
 .introduction img {
   display: block;
   margin-left: auto;
